Fixed dark theme for edit recurr popup modal Fixed alignment of center column in manage recurr page

--- a/Reflection/wwwroot/CSS/ManageRecurringPosts-dark.css
+++ b/Reflection/wwwroot/CSS/ManageRecurringPosts-dark.css
@@ -98,8 +98,6 @@ body {
 
 .privacy {
     font-size: 14px;
-    padding-left: 0px !important;
-    text-align: center;
 }
 
 .privacy2 {
@@ -411,10 +409,12 @@ input::-webkit-calendar-picker-indicator {
     cursor: pointer;
 }
 
-.editbuttons {
-    position: absolute;
-    right: 5.2%;
-    bottom: 2%;
+.donebuttons {
+    position: relative;
+    padding-top: 0.5rem;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
 }
     .btn-cancle:focus,
     .btn-send:focus {
@@ -422,7 +422,7 @@ input::-webkit-calendar-picker-indicator {
     }
 
 .btn-send {
-    background-color: #6266a5;
+    background-color: #6266A5;
     color: #ffffff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
     width: 97px;
@@ -481,10 +481,10 @@ input::-webkit-calendar-picker-indicator {
 /*week*/
 .week {
     position: relative;
-    background: #ffffff;
-    padding-bottom: 2%;
+    background: #2D2C2C;
     box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.3);
-    height: 230px;
+    height: auto;
+    border: 1px solid #201F1F;
 }
 
 .float-right {
@@ -524,4 +524,145 @@ input::-webkit-calendar-picker-indicator {
 .post {
     position: absolute;
     left: 398px;
+}
+
+.selectedweek, .selectedweek:hover {
+    background-color: #6266A5;
+    color: #fff;
+}
+
+.weekselect {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    min-width: 2.2rem !important;
+    box-shadow: none;
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+    display: inline;
+    align-items: center;
+}
+
+.re {
+    font-family: Segoe UI;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.75);
+    margin: 18px 12px 17px 0px;
+    width: 80px;
+    height: 20px;
+}
+
+.recurrence {
+    font-family: Segoe UI;
+    font-weight: bold;
+    font-size: 14px;
+    color: #fff;
+}
+
+.finaldates {
+    width: 239px;
+    font-family: Segoe UI;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.75)
+}
+
+.month {
+    position: relative;
+    width: 320px;
+    background: #2D2C2C;
+    box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.3);
+    height: auto;
+}
+
+.on-day-radio {
+    margin-top: 10px;
+    background: #6266A5;
+}
+
+.on-the-radio {
+    margin-top: 18px;
+    background: #6266A5;
+}
+
+.number {
+    -webkit-appearance: none;
+    padding: 0px 12px;
+    width: 40px;
+    height: 32px;
+    background: #201F1F;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    font-family: Segoe UI;
+    font-size: 14px;
+    color: #fff;
+}
+
+.day-drp {
+    -webkit-appearance: none;
+    padding: 0px 12px;
+    width: 90px;
+    height: 32px;
+    background: #201F1F;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    font-family: Segoe UI;
+    font-size: 14px;
+    color: #fff;
+}
+
+.day-number,
+.days-text {
+    -webkit-appearance: none;
+    padding: 0px 12px;
+    width: 74px;
+    height: 32px;
+    background: #201F1F;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    font-family: Segoe UI;
+    font-size: 14px;
+    margin: 8px 0 11px 0;
+    color: #fff;
+}
+
+.on-day {
+    font-family: Segoe UI;
+    font-size: 14px;
+    color: #fff;
+    margin-right: 8px;
+}
+
+.day {
+    position: relative;
+    width: 320px;
+    background: #2D2C2C;
+    height: auto;
+}
+
+.day-drp {
+    -webkit-appearance: none;
+    padding: 0px 12px;
+    width: 90px;
+    height: 32px;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    font-family: Segoe UI;
+    font-size: 14px;
+    color: #fff;
+}
+
+.down-chev::before {
+    content: "\E447";
+    font-family: "Teams Assets";
+    font-size: 16px;
+    color: #fff;
+    position: relative;
+    right: 1.5rem;
+    top: 4px;
+    pointer-events: none;
 }
