--- a/Reflection/wwwroot/CSS/ManageRecurringPosts.css
+++ b/Reflection/wwwroot/CSS/ManageRecurringPosts.css
@@ -90,8 +90,6 @@
 
 .privacy {
     font-size: 14px;
-    padding-left: 0px !important;
-    text-align: center;
 }
 
 .privacy2 {
@@ -487,8 +485,8 @@ input::-webkit-calendar-picker-indicator {
 .day {
     position: relative;
     width: 320px;
-    padding-bottom: 2%;
     background: #ffffff;
+    height: auto;
 }
 
 .recurrence {
@@ -498,10 +496,12 @@ input::-webkit-calendar-picker-indicator {
     color: #252423;
 }
 
-.editbuttons {
-    position: absolute;
-    right: 5.2%;
-    bottom: 2%;
+.donebuttons {
+    position: relative;
+    padding-top: 0.5rem;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 .repeat {
@@ -576,7 +576,7 @@ input::-webkit-calendar-picker-indicator {
     background: #ffffff;
     padding-bottom: 2%;
     box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.3);
-    height: 235px;
+    height: auto;
 }
 
 .day-select {
@@ -599,7 +599,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
     .weekselect:hover {
-        background-color: #e2e2f6 !important;
+        background-color: #e2e2f6;
         color: #6264a7;
     }
 
@@ -608,7 +608,7 @@ input::-webkit-calendar-picker-indicator {
     }
 
 .selectedweek, .selectedweek:hover {
-    background-color: #6266a5 !important;
+    background-color: #6266a5;
     color: #fff;
 }
 
@@ -634,14 +634,13 @@ button:focus {
 .month {
     position: relative;
     width: 320px;
-    padding-bottom: 2%;
     background: #ffffff;
     box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.3);
+    height: auto;
 }
 
 .finaldates {
     width: 239px;
-    height: 16px;
     font-family: Segoe UI;
     font-size: 12px;
     color: #484644;
